--- a/Kmarket/src/main/resources/application.properties
+++ b/Kmarket/src/main/resources/application.properties
@@ -10,7 +10,10 @@ server.servlet.context-path=/
 server.port=8080
 
 #DB Setting
-spring.datasource.url=jdbc:mysql://13.209.84.189:3306/wks194510
+#배포용
+#spring.datasource.url=jdbc:mysql://13.209.84.189:3306/wks194510
+#개발용
+spring.datasource.url=jdbc:mysql://54.180.160.240:3306/kmarket
 spring.datasource.username=wks194510
 spring.datasource.password=1234
 spring.datasource.driver-class-name=com.mysql.jdbc.Driver
