--- a/Kmarket/pom.xml
+++ b/Kmarket/pom.xml
@@ -72,6 +72,14 @@
 		    <artifactId>gson</artifactId>
 		    <version>2.8.8</version>
 		</dependency>
+		
+		<!-- https://mvnrepository.com/artifact/org.springframework.boot/spring-boot-starter-data-jpa -->
+		<dependency>
+		    <groupId>org.springframework.boot</groupId>
+		    <artifactId>spring-boot-starter-data-jpa</artifactId>
+		    <version>2.5.6</version>
+		</dependency>
+		
 	</dependencies>
 
 	<build>
